--- a/casino_guru_complete/requirements.txt
+++ b/casino_guru_complete/requirements.txt
@@ -1,7 +1,4 @@
 flask==3.1.2
-flask-socketio==5.3.6
-python-socketio==5.10.0
-eventlet==0.33.3
+flask-cors==4.0.0
 requests==2.31.0
-pathlib2==2.3.7
-
+websockets==11.0.3
