--- a/casino_guru_complete/package.json
+++ b/casino_guru_complete/package.json
@@ -2,12 +2,12 @@
   "name": "banana-bonanza-game",
   "version": "1.0.0",
   "description": "Banana Bonanza Crash Game - Offline Version with Flask API",
-  "main": "casino_guru_complete/staging.playzia.com/games/playzia-bananabonanza/index.html",
+  "main": "staging.playzia.com/games/playzia-bananabonanza/index.html",
   "scripts": {
     "start": "vercel dev",
     "build": "echo 'No build step required for static files'",
     "deploy": "vercel --prod",
-    "dev": "python casino_guru_complete/mock_server_flask.py"
+    "dev": "python mock_server_flask.py"
   },
   "keywords": [
     "crash-game",
