--- a/casino_guru_complete/vercel.json
+++ b/casino_guru_complete/vercel.json
@@ -3,70 +3,70 @@
   "name": "banana-bonanza-game",
   "builds": [
     {
-      "src": "casino_guru_complete/mock_server_flask.py",
+      "src": "mock_server_flask.py",
       "use": "@vercel/python"
     },
     {
-      "src": "casino_guru_complete/**/*",
+      "src": "**/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/casino_guru_complete/mock_server_flask.py"
+      "dest": "/mock_server_flask.py"
     },
     {
       "src": "/token",
-      "dest": "/casino_guru_complete/mock_server_flask.py"
+      "dest": "/mock_server_flask.py"
     },
     {
       "src": "/frontendService/(.*)",
-      "dest": "/casino_guru_complete/mock_server_flask.py"
+      "dest": "/mock_server_flask.py"
     },
     {
       "src": "/staging.playzia.com/(.*)",
-      "dest": "/casino_guru_complete/mock_server_flask.py"
+      "dest": "/mock_server_flask.py"
     },
     {
       "src": "/gs2.playzia.com/(.*)",
-      "dest": "/casino_guru_complete/mock_server_flask.py"
+      "dest": "/mock_server_flask.py"
     },
     {
       "src": "/api.playzia.staging.hizi-service.com/(.*)",
-      "dest": "/casino_guru_complete/mock_server_flask.py"
+      "dest": "/mock_server_flask.py"
     },
     {
       "src": "/",
-      "dest": "/casino_guru_complete/staging.playzia.com/games/playzia-bananabonanza/index.html"
+      "dest": "/staging.playzia.com/games/playzia-bananabonanza/index.html"
     },
     {
       "src": "/game",
-      "dest": "/casino_guru_complete/staging.playzia.com/games/playzia-bananabonanza/index.html"
+      "dest": "/staging.playzia.com/games/playzia-bananabonanza/index.html"
     },
     {
       "src": "/assets/(.*)",
-      "dest": "/casino_guru_complete/staging.playzia.com/games/playzia-bananabonanza/assets/$1"
+      "dest": "/staging.playzia.com/games/playzia-bananabonanza/assets/$1"
     },
     {
       "src": "/static/(.*)",
-      "dest": "/casino_guru_complete/static.casino.guru/res/$1"
+      "dest": "/static.casino.guru/res/$1"
     },
     {
       "src": "/fonts/(.*)",
-      "dest": "/casino_guru_complete/fonts.gstatic.com/s/notosans/v6/$1"
+      "dest": "/fonts.gstatic.com/s/notosans/v6/$1"
     },
     {
       "src": "/bootstrap/(.*)",
-      "dest": "/casino_guru_complete/maxcdn.bootstrapcdn.com/bootstrap/3.3.7/$1"
+      "dest": "/maxcdn.bootstrapcdn.com/bootstrap/3.3.7/$1"
     },
     {
       "src": "/common/(.*)",
-      "dest": "/casino_guru_complete/staging.playzia.com/games/common/$1"
+      "dest": "/staging.playzia.com/games/common/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/casino_guru_complete/staging.playzia.com/games/playzia-bananabonanza/$1"
+      "dest": "/staging.playzia.com/games/playzia-bananabonanza/$1"
     }
   ],
   "headers": [
@@ -141,7 +141,7 @@
     }
   ],
   "functions": {
-    "./mock_server_flask.py": {
+    "mock_server_flask.py": {
       "runtime": "python3.9"
     }
   },
